--- a/style/variables.css
+++ b/style/variables.css
@@ -5,4 +5,7 @@
     --main-blue-color: #2f93d0;
     --main-green-color: #35a793;
     --main-orange-color: #fbd479;
+    --main-light-blue-color: #4acaea;
+    --main-gray-color: #4c4c4c;
+    --main-light-gray-color: #f5f5f5;
 }
