--- a/style/media-queries.css
+++ b/style/media-queries.css
@@ -1,3 +1,103 @@
+/* --- */
+
+@media screen and (max-width: 992px){
+    .section-title{
+        font-size: 7em;
+    }
+    .how-it-works__row-block p {
+        font-size: 2.6em;
+        margin: 1.75em 0em 1.05em 0.2em;
+    }
+    .how-it-works__row-block__img-container:before{
+        bottom: 2.4em;
+    }
+    .how-it-works__row-block__img-container:after{
+        bottom: 2.4em;
+    }
+    .subscribe__title{
+        font-size: 7em;
+    }
+    .subscribe-btn{
+        font-size: 4.5em;
+    }
+}
+
+@media screen and (max-width: 768px){
+    .who-we-are__img-container{
+        padding-bottom: 35rem;
+    }
+    .subscribe__banner{
+        margin: 7em 0em 0em 0em;
+    }
+    .masonry-gallery__title{
+        order:1;
+        padding-top: 0.5em;
+    }
+    .masonry-gallery__description{
+        order: 2;
+        padding-bottom: 2em;
+    }
+    .slick-arrow{
+        background-size: 2em 1.6em;
+        width: 4.4em;
+        height: 3em;
+    }
+    .services-slider .slick-next{
+        right: 12rem;
+    }
+    .client-feedback__slider{ 
+        padding-bottom: 11em !important;
+    }
+    .client-feedback__slider .slick-next{
+        bottom: 40px !important;
+        right: 60px !important;
+    }
+    .client-feedback__slider .slick-prev{
+        bottom: 40px !important;
+    }
+}
+
+@media screen and (max-width: 568px){
+    .contact-us__form-col{
+        order: 2;
+    }
+    .contact-us__form-col{
+        padding-top: 4em;
+        padding-bottom: 4em;
+    }
+    .contact-us__info-col{
+        padding: 7em 0em 5em 0em;
+    }
+    .contact-us__info-col > a{
+        margin-bottom: 2em;
+    }
+    .slick-next:before, .slick-prev:before{
+        background-size: 1.4em 1em !important;
+        width: 3.8em !important;
+        height: 2.6em !important;
+    }
+    .client-feedback__slider .slick-next{
+        right: 40px !important;
+    }
+}
+
+@media screen and (max-width: 1030px){
+    .client-feedback__slider{ 
+        overflow: hidden;
+        padding-bottom: 9em;
+    }
+    .client-feedback__slider .slick-next{
+        bottom: 20px;
+        right: 40px;
+    }
+    .client-feedback__slider .slick-prev{
+        bottom: 20px;
+        left: 40px;
+    }
+}
+
+/* --- */
+
 @media screen and (min-width: 1720px) and (max-width: 1920px){
     html{
         font-size: 60.5%;
@@ -319,6 +419,16 @@
     .masonry-gallery__col img{
         max-height: 250px;
     }
+    .client-feedback__slider{
+        padding-bottom: 3em;
+    }
+    .client-feedback__slider .slick-next{
+        bottom: 22px !important;
+    }
+    .client-feedback__slider .slick-prev{
+        bottom: 22px !important;
+        left: 10px !important;
+    }
 }
 
 /* MEDIA QUERIES FOR 300PX BETWEEN 340PX */
@@ -362,79 +472,18 @@
     .who-we-are__img-container {
         padding-bottom: 25rem !important;
     }
+    .client-feedback__slider .slick-next{
+        bottom: 21px !important;
+    }
+    .client-feedback__slider .slick-prev{
+        bottom: 21px !important;
+        left: 10px !important;
+    }
 }
 
 @media screen and (min-width: 992px) and (max-width: 1080px){
     .how-it-works__row-block p {
         font-size: 2.3em;
         margin: 2.72em 0em 1.05em 0.2em;
-    }
-}
-
-@media screen and (max-width: 992px){
-    .section-title{
-        font-size: 7em;
-    }
-    .how-it-works__row-block p {
-        font-size: 2.6em;
-        margin: 1.75em 0em 1.05em 0.2em;
-    }
-    .how-it-works__row-block__img-container:before{
-        bottom: 2.4em;
-    }
-    .how-it-works__row-block__img-container:after{
-        bottom: 2.4em;
-    }
-    .subscribe__title{
-        font-size: 7em;
-    }
-    .subscribe-btn{
-        font-size: 4.5em;
-    }
-}
-
-@media screen and (max-width: 768px){
-    .who-we-are__img-container{
-        padding-bottom: 35rem;
-    }
-    .subscribe__banner{
-        margin: 7em 0em 0em 0em;
-    }
-    .masonry-gallery__title{
-        order:1;
-        padding-top: 0.5em;
-    }
-    .masonry-gallery__description{
-        order: 2;
-        padding-bottom: 2em;
-    }
-    .slick-arrow{
-        background-size: 2em 1.6em;
-        width: 4.4em;
-        height: 3em;
-    }
-    .services-slider .slick-next{
-        right: 12rem;
-    }
-}
-
-@media screen and (max-width: 568px){
-    .contact-us__form-col{
-        order: 2;
-    }
-    .contact-us__form-col{
-        padding-top: 4em;
-        padding-bottom: 4em;
-    }
-    .contact-us__info-col{
-        padding: 7em 0em 5em 0em;
-    }
-    .contact-us__info-col > a{
-        margin-bottom: 2em;
-    }
-    .slick-next:before, .slick-prev:before{
-        background-size: 1.4em 1em !important;
-        width: 3.8em !important;
-        height: 2.6em !important;
     }
 }
