--- a/style/media-queries.css
+++ b/style/media-queries.css
@@ -20,6 +20,21 @@
     .subscribe-btn{
         font-size: 4.5em;
     }
+    .big-letters__row-block span{
+        width: 25%;
+        text-align: center;
+    }
+    .big-letters__row-block p{
+        width: 65%;
+    }
+    .big-letters__row-block:nth-child(2) span {
+        padding-left: 0em;
+    }
+    .big-letters__row-block p {
+        font-size: 3.6em !important;
+        line-height: 1.5em;
+        padding-right: 1em;
+    }
 }
 
 @media screen and (max-width: 768px){
@@ -57,15 +72,24 @@
     }
     .services-slider .slick-next {
         bottom: 8rem;
-        right: 17rem;
+        right: 13rem;
     }
     .services-slider .slick-prev {
         bottom: 8rem;
         left: 6rem;
     }
+    .how-it-works__row-block p {
+        font-size: 3.4em;
+    }
+    .how-it-works__row-block__img-container:after{
+        left: 1.4em;
+    }
+    .how-it-works__row-block__img-container:before{
+        left: 1.8em;
+    }
 }
 
-@media screen and (max-width: 568px){
+@media screen and (max-width: 578px){
     .contact-us__form-col{
         order: 2;
     }
@@ -86,6 +110,18 @@
     }
     .client-feedback__slider .slick-next{
         right: 40px !important;
+    }
+    .big-letters__row-block p {
+        font-size: 3.3em !important;
+    }
+    .how-it-works__row-block p {
+        font-size: 2.9em;
+    }
+    .how-it-works__row-block__img-container:after{
+        bottom: 1.9em;
+    }
+    .how-it-works__row-block__img-container:before{
+        bottom: 1.9em;
     }
 }
 
@@ -173,6 +209,9 @@
     }
     .masonry-gallery__description {
         font-size: 2.15em;
+    }
+    .how-it-works__row-block p{
+        font-size: 2.3em;
     }
 
 }
@@ -389,6 +428,15 @@
     .who-we-are__img-container {
         padding-bottom: 30rem !important;
     }
+    .how-it-works__row-block p {
+        font-size: 2.5em;
+    }
+    .how-it-works__row-block__img-container:after{
+        bottom: 1.6em;
+    }
+    .how-it-works__row-block__img-container:before{
+        bottom: 1.6em;
+    }
 }
 
 /* MEDIA QUERIES FOR 340PX BETWEEN 375PX */
@@ -436,6 +484,12 @@
     .client-feedback__slider .slick-prev{
         bottom: 22px !important;
         left: 10px !important;
+    }
+    .how-it-works__row-block__img-container:after{
+        left: 1.9em;
+    }
+    .how-it-works__row-block__img-container:before{
+        left: 2.35em;
     }
 }
 
@@ -487,11 +541,28 @@
         bottom: 21px !important;
         left: 10px !important;
     }
+    .how-it-works__row-block p {
+        font-size: 2.75em;
+    }
+    .how-it-works__row-block__img-container:after{
+        left: 1.6em;
+        bottom: 1.7em;
+    }
+    .how-it-works__row-block__img-container:before{
+        left: 2.0em;
+        bottom: 1.7em;
+    }
 }
 
 @media screen and (min-width: 992px) and (max-width: 1080px){
     .how-it-works__row-block p {
         font-size: 2.3em;
         margin: 2.72em 0em 1.05em 0.2em;
+    }
+}
+
+@media screen and (max-width: 1040px){
+    .big-letters__row-block p {
+        font-size: 2.2em;
     }
 }
