--- a/style/media-queries.css
+++ b/style/media-queries.css
@@ -35,9 +35,19 @@
         line-height: 1.5em;
         padding-right: 1em;
     }
+    .services__row{
+        justify-content: flex-start;
+    }
+    .services__row div{
+        padding-left: 1em !important;
+        font-weight: 500;
+        flex: 0 0 32%;
+        max-width: 32%;
+        margin-right: 10px;
+    }
 }
 
-@media screen and (max-width: 768px){
+@media screen and (max-width: 767px){
     .who-we-are__img-container{
         padding-bottom: 35rem;
     }
@@ -86,6 +96,15 @@
     }
     .how-it-works__row-block__img-container:before{
         left: 1.8em;
+    }
+    .services__row{
+        justify-content: space-between;
+    }
+    .services__row div{
+        flex: 0 0 49%;
+        max-width: 49%;
+        padding-left: 2em !important;
+        margin-right: 0;
     }
 }
 
