--- a/style/base.css
+++ b/style/base.css
@@ -25,3 +25,32 @@ body{
     font-family: 'Berlin Sans Regular', sans-serif;
     font-size: 100%;
 }
+
+
+.top-bar__row-col__nav::-webkit-scrollbar{
+    height: 0.55rem;
+    margin-right: 10px;
+    width: 0.22rem;
+    background: #fff;
+}
+
+.top-bar__row-col__nav::-webkit-scrollbar-track{
+    height: 0.56rem;
+    width: 0.22rem;
+    background: #D8E6E7;
+}
+
+.top-bar__row-col__nav::-webkit-scrollbar-thumb{
+    background: rgba(51, 51, 51, 0.5);
+    opacity: 0.3;
+    border-radius: 1ex;
+}
+
+.top-bar__row-col__nav::-webkit-scrollbar-corner{
+    background: #fff;
+}
+.top-bar__row-col__nav::-webkit-scrollbar-thumb{
+    background: rgba(51, 51, 51, 0.5);
+    opacity: 0.3;
+    border-radius: 1ex;
+}
