--- a/style/footer.css
+++ b/style/footer.css
@@ -22,6 +22,7 @@
     color: #2a2a2a;
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
+    padding-bottom: 1em;
 }
 
 .contact-us__info-col{
