--- a/style/base.css
+++ b/style/base.css
@@ -54,3 +54,23 @@ body{
     opacity: 0.3;
     border-radius: 1ex;
 }
+
+.main-btn{
+    border: solid 2px var(--main-red-color) !important;
+}
+
+.main-btn:hover{
+    color: var(--main-red-color);
+    background: transparent;
+    border: solid 2px var(--main-red-color);
+}
+
+.main-btn_transparent{
+    border: solid 2px var(--main-red-color) !important;
+}
+
+.main-btn_transparent:hover{
+    color: #FFF !important;
+    background-color: var(--main-red-color) !important;
+    border: solid 2px var(--main-red-color);
+}
