--- a/style/media-queries.css
+++ b/style/media-queries.css
@@ -167,7 +167,7 @@
 
 /* MEDIA SCREEN LESS THAN 578 PX ! DOESN`T CHANGE IN BELOW QUERIES */
 
-@media screen and (max-width: 578px){
+@media screen and (max-width: 576px){
     .contact-us__form-col{
         order: 2;
     }
@@ -226,6 +226,14 @@
     }
     .top-bar__row-col__nav ul li a{
         font-size: 3.4em;
+    }
+    .auth-main__row__left-col{
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 4em;
+    }
+    .auth-main__row__left-col img{
+        max-width: 20em !important;
     }
 }
 
@@ -346,6 +354,13 @@
     .home-page .header-title{
         font-size: 8em;
     }
+    .auth-main__row__left-col img{
+        max-width: 30em;
+    }
+    .auth-main__row__left-col h1{
+        font-size: 9em;
+        padding-right: 0em;
+    }
 
 }
 
@@ -396,6 +411,13 @@
     }
     .home-page .header-title{
         font-size: 7.8em;
+    }
+    .auth-main__row__left-col img{
+        max-width: 30em;
+    }
+    .auth-main__row__left-col h1{
+        font-size: 9em;
+        padding-right: 0em;
     }
 }
 
@@ -450,11 +472,18 @@
     .header-benefits__block{
         padding: 0em 5em;
     }
+    .auth-main__row__left-col img{
+        max-width: 35em;
+    }
+    .auth-main__row__left-col h1{
+        font-size: 7em;
+        padding-right: 0em;
+    }
 }
 
 /* MEDIA QUERIES FOR 578PX BETWEEN 768PX */
 
-@media screen and (min-width: 578px) and (max-width: 768px){
+@media screen and (min-width: 576px) and (max-width: 768px){
     html{
         font-size: 36.5%;
     }
@@ -497,11 +526,24 @@
     .burger-menu{
         top: 7.95em;
     }
+    .auth-main__row__left-col img{
+        max-width: 30em;
+    }
+    .auth-main__row__left-col h1{
+        font-size: 6.5em;
+        padding-right: 0em;
+    }
+    .auth main{
+        padding: 7em 0em 0em 0em;
+    }
+    .auth-copyright {
+        padding: 4.875em 0em 1.25em 0em;
+    }
 }
 
 /* MEDIA QUERIES FOR 420PX BETWEEN 578PX */
 
-@media screen and (min-width: 420px) and (max-width: 578px){
+@media screen and (min-width: 420px) and (max-width: 575px){
     html{
         font-size: 30.5%;
     }
@@ -540,6 +582,14 @@
     }
     .home-page .header-title{
         font-size: 5em;
+    }
+    .auth-main__row__left-col img{
+        max-width: 30em;
+        margin-bottom: 5em;
+    }
+    .auth-main__row__left-col h1{
+        font-size: 6.5em;
+        padding-right: 0em;
     }
 }
 
@@ -593,6 +643,17 @@
     }
     .home-page .header-title{
         font-size: 5em;
+    }
+    .auth-main__row__left-col img{
+        max-width: 30em;
+        margin-bottom: 5em;
+    }
+    .auth-main__row__left-col h1{
+        font-size: 6.5em;
+        padding-right: 0em;
+    }
+    .auth-copyright{
+        padding-top: 1em;
     }
 }
 
@@ -652,6 +713,17 @@
     }
     .home-page .header-title{
         font-size: 4.8em;
+    }
+    .auth-main__row__left-col img{
+        max-width: 30em;
+        margin-bottom: 5em;
+    }
+    .auth-main__row__left-col h1{
+        font-size: 6.5em;
+        padding-right: 0em;
+    }
+    .auth-copyright{
+        padding-top: 1em;
     }
 }
 
@@ -716,6 +788,17 @@
     }
     .home-page .header-title{
         font-size: 4.8em;
+    }
+    .auth-main__row__left-col img{
+        max-width: 30em;
+        margin-bottom: 5em;
+    }
+    .auth-main__row__left-col h1{
+        font-size: 6.5em;
+        padding-right: 0em;
+    }
+    .auth-copyright{
+        padding-top: 1em;
     }
 }
 
