--- a/style/media-queries.css
+++ b/style/media-queries.css
@@ -231,6 +231,7 @@
         flex-direction: column;
         align-items: center;
         margin-bottom: 4em;
+        text-align: center;
     }
     .auth-main__row__left-col img{
         max-width: 20em !important;
