--- a/style/auth.css
+++ b/style/auth.css
@@ -128,6 +128,7 @@
     font-family: 'Roboto', sans-serif;
     text-align: center;
     padding: 6.875em 0em 1.25em 0em;
+    font-weight: 500;
 }
 
 .sign-up-main h1 span{
@@ -191,6 +192,7 @@
     font-family: 'Roboto', sans-serif;
     color: var(--main-text-color);
     margin-bottom: 1.52em;
+    font-weight: 500;
 }
 
 .sign-up__start-section__plan-block p{
@@ -228,14 +230,15 @@
     flex-direction: column;
 }
 
-.sign-up-main label{
+.sign-up-main label, .custom-theme-select__container{
     font-family: 'Roboto', sans-serif;
     font-size: 2.1em !important;
 }
 
-.sign-up__individual-section .splited-col{
+.sign-up__individual-section .splited-col, .sign-up__individual-section .splited-col-1-5{
     display: flex;
     justify-content: space-between;
+    align-items: flex-end;
 
 }
 
@@ -244,16 +247,38 @@
     width: 49%;
 }
 
-.sign-up__individual-section .splited-col-1-5 .custom-theme-select{
-    width: 20%;
-    margin-top: 1em;
+.sign-up__individual-section .splited-col-1-5 .custom-theme-select__container{
+    width: 19%;
 }
 
-.sign-up__individual-section .splited-col-1-5 label{
+.sign-up__individual-section .splited-col-1-5 .custom-theme-select{
+    margin-top: 0.25em;
+}
+
+.custom-theme-select{
+    font-size: 2.2rem;
+    font-family: 'Roboto', sans-serif;
+}
+
+.sign-up__individual-section .splited-col-1-5 label:nth-child(2){
     margin-top: 1em;
     width: 79%;
 }
 
 .sign-up__individual-section .save-btn{
     margin-top: 1em;
+}
+
+.section-step .select-selected{
+    padding-top: 0.93em;
+    padding-bottom: 0.93em;
+    margin-bottom: 4px;
+}
+
+.sign-up__individual-section{
+    display: none;
+}
+
+.sign-up__individual-section.active{
+    display: block;
 }
