--- a/style/select.css
+++ b/style/select.css
@@ -8,10 +8,9 @@
 
 .select-selected {
     background-color: #FFF;
-    box-shadow: 0px 0px 0.6rem 0px rgba(230, 230, 230, 0.5);
-    color: #000 !important;
-    border-top-left-radius: 0.4rem;
-    border-top-right-radius: 0.4rem;
+    border: solid 1px #707070;
+    color: #7d7b7b;
+    border-radius: 0.2em;
 
 }
 
@@ -19,31 +18,32 @@
 .select-selected:after {
     position: absolute;
     content: "";
-    background-image: url('../img/arrow.svg');
+    background-image: url('../img/down-arrow.svg');
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 1em 0.55em;
     top: 50%;
-    right: 1.25rem;
+    top: 4.65rem;
+    right: 1.85rem;
     transform: translate(0%, -50%);
-    width: 1.45rem;
-    height: 0.78rem;
+    width: 1em;
+    height: 0.55em;
+    transition: 0.2s ease-in-out;
 }
 
 /*point the arrow upwards when the select box is open (active):*/
 .select-selected.select-arrow-active:after {
     border-color: transparent transparent #fff transparent;
-    top: 50%;
-    transform: translate(0%, -50%);
+    transform: rotate(180deg);
+    top: 3.75rem;
 }
 
 /*style the items (options), including the selected item:*/
 .select-items div,.select-selected {
-    color: #3c3c3c;
-    padding: 0.8rem 1.6rem;
-    border: 0.1rem solid transparent;
-    border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
+    padding: 2rem 2rem;
     cursor: pointer;
+    box-shadow: 0px 0px 2px 0px #e2e2e2;
     user-select: none;
+    color: #7d7b7b;
 }
 
 /*style items (options):*/
