--- a/style/top-bar.css
+++ b/style/top-bar.css
@@ -46,3 +46,16 @@
     border: none;
     text-transform: uppercase;
 }
+
+.welcome-user{
+    font-size: 3em;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    text-transform: uppercase;
+    color: var(--main-red-color);
+}
+
+.welcome-user:hover{
+    color: var(--main-red-color);
+    text-decoration: none;
+}
