--- a/style/auth.css
+++ b/style/auth.css
@@ -177,7 +177,7 @@
 }
 
 .sign-up__start-section__plan-block img{
-    max-height: 134px;
+    max-height: 13.4em;
     width: auto;
     margin: 4em 7em;
 }
