--- a/style/pay.css
+++ b/style/pay.css
@@ -5,3 +5,8 @@
 .pay-main .auth-copyright{
     padding-top: 2em !important;
 }
+
+.pay-step-2 label img{
+    max-height: 1.9em;
+    width: auto;
+}
